--- a/M_17_Logging_and_profiling/requirements.txt
+++ b/M_17_Logging_and_profiling/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.5.2
+asgiref==3.7.2
 Django==4.1.6
-django-filter==22.1
+django-debug-toolbar==4.3.0
+django-filter==23.5
 djangorestframework==3.14.0
-Pillow==9.4.0
-pytz==2022.7.1
-sqlparse==0.4.2
+pillow==10.2.0
+pytz==2024.1
+sqlparse==0.4.4
+typing_extensions==4.9.0
